force-app/main/default/objects/Success_Plan__c/Success_Plan__c.object-meta.xml
<CustomObject>
    <label>Success Plan</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>