force-app/main/default/objects/Success_Plan__c/fields/Account_Renewed_Post_CEM_Efforts__c.field-meta.xml
<CustomField>
    <fullName>Account_Renewed_Post_CEM_Efforts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21-3139: CEM Success Plan Enhancements</description>
    <label>Account Renewed Post CEM Efforts</label>
    <type>Checkbox</type>
</CustomField>