force-app/main/default/objects/Success_Plan__c/fields/CEM__c.field-meta.xml
<CustomField>
    <fullName>CEM__c</fullName>
    <description>CS21-3139: CEM Success Plan Enhancements</description>
    <label>CEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>