force-app/main/default/objects/Success_Plan__c/fields/Created_by_Current_CEM__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Current_CEM__c</fullName>
    <formula>$User.Id =  Account__r.Account_SAM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Current CEM</label>
    <type>Checkbox</type>
</CustomField>