force-app/main/default/objects/Success_Plan__c/fields/Customer_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Success Plans</relationshipLabel>
    <relationshipName>Success_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>