force-app/main/default/objects/Success_Plan__c/fields/Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Email</field>
            <operation>contains</operation>
            <value>@rubrik.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Success Plans (Internal Contact)</relationshipLabel>
    <relationshipName>Success_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>