force-app/main/default/objects/Success_Plan__c/fields/Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update__c</fullName>
    <label>Latest Update</label>
    <type>TextArea</type>
</CustomField>