force-app/main/default/objects/Success_Plan__c/fields/MOM__c.field-meta.xml
<CustomField>
    <fullName>MOM__c</fullName>
    <description>CS21-3139: CEM Success Plan Enhancements</description>
    <label>MOM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>