force-app/main/default/objects/Success_Plan__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>