force-app/main/default/objects/Success_Plan__c/fields/Priority_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Sort_Order__c</fullName>
    <formula>CASE(
    Priority__c,
    &quot;High&quot;, 1,
    &quot;Medium&quot;, 2,
    &quot;Low&quot;, 3,
    &quot;Long-Term&quot;, 4,
    999999999
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>