force-app/main/default/objects/Success_Plan__c/fields/QBR_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>QBR_Delivery_Date__c</fullName>
    <description>CS21-3139: CEM Success Plan Enhancements</description>
    <label>QBR Delivery Date</label>
    <type>DateTime</type>
</CustomField>