force-app/main/default/objects/Success_Plan__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>CS21-3139: CEM Success Plan Enhancements</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>