force-app/main/default/objects/Success_Plan__c/listViews/Success_Plans.listView-meta.xml
<ListView>
    <fullName>Success_Plans</fullName>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Latest_Update__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Planned_End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Completion__c</columns>
    <columns>At_Risk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_Current_CEM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Success Plans</label>
</ListView>